fix: remove spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,7 +32,6 @@
 .chart {
   width: 45%;
   height: 500px;
-  margin: auto;
   @media only screen and (max-width: 800px) {
     width: 100%;
   }
